--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "template-default-react",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .jsx,.ts,.tsx ./src"
   },
   "dependencies": {
-    "@eduzz/houston-forms": "^1.8.0",
-    "@eduzz/houston-hooks": "^1.8.0",
-    "@eduzz/houston-ui": "^1.8.0",
+    "@emotion/css": "^11.10.6",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "antd": "^5.3.2",
     "axios": "^1.3.4",
     "react": "^18.2.0",
